@@ -42,15 +42,15 @@
    "provides" : {
       "Travel::Status::DE::ASEAG" : {
          "file" : "lib/Travel/Status/DE/ASEAG.pm",
-         "version" : "0.02"
+         "version" : "0.03"
       },
       "Travel::Status::DE::URA" : {
          "file" : "lib/Travel/Status/DE/URA.pm",
-         "version" : "0.02"
+         "version" : "0.03"
       },
       "Travel::Status::DE::URA::Result" : {
          "file" : "lib/Travel/Status/DE/URA/Result.pm",
-         "version" : "0.02"
+         "version" : "0.03"
       }
    },
    "release_status" : "stable",
@@ -59,5 +59,5 @@
          "http://dev.perl.org/licenses/"
       ]
    },
-   "version" : "0.02"
+   "version" : "0.03"
 }
