@@ -18,13 +18,13 @@ name: Travel-Status-DE-URA
 provides:
   Travel::Status::DE::ASEAG:
     file: lib/Travel/Status/DE/ASEAG.pm
-    version: 0.02
+    version: 0.03
   Travel::Status::DE::URA:
     file: lib/Travel/Status/DE/URA.pm
-    version: 0.02
+    version: 0.03
   Travel::Status::DE::URA::Result:
     file: lib/Travel/Status/DE/URA/Result.pm
-    version: 0.02
+    version: 0.03
 requires:
   Carp: 0
   Class::Accessor: 0
@@ -36,4 +36,4 @@ requires:
   perl: v5.10.1
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.02
+version: 0.03
