@@ -16,34 +16,35 @@ Hash: SHA512
 
 SHA1 5e2db1f0c398207a0720a2bea5a86e1231e6c7ba Build.PL
 SHA1 361ddf32161f29d569443673ee7170d45de43444 COPYING
-SHA1 f08c315ec06fa7b838f930ff94f8bde475b9ed6a Changelog
-SHA1 d99b7501e15110d5c0fc353b59737a373dbbbcee MANIFEST
-SHA1 60a9edddeb499d60502651d02fdd744782ea0693 META.json
-SHA1 dc48e7332d7336241b1ead955e0b69c37ab35b98 META.yml
-SHA1 6994ff094f9f73086f08c40af74c1f431f8de6fb README
-SHA1 bfc4c73e56d1084f974a9002628fcbafad564e04 bin/aseag-m
-SHA1 bda3b67fddeff75270180750e16c5964c20c14d9 lib/Travel/Status/DE/ASEAG.pm
-SHA1 bd05e28cc2da623d3f2c3fc245fd36906bf752f0 lib/Travel/Status/DE/URA.pm
-SHA1 f4711c0cb867e021d1b62cce0969db1bcde2a7cc lib/Travel/Status/DE/URA/Result.pm
+SHA1 a903642d2637a596e6b59ee1e5cf8ff7700805da Changelog
+SHA1 6e230ce935cb37dedb065a8d225e1b0b4cbac6a9 MANIFEST
+SHA1 948ed9bf3a2f75920ef532488297060b878f7715 META.json
+SHA1 c63110b7ab9037704032ecb7cac1dbd234b4265f META.yml
+SHA1 3dfc92de58976d71780898b143caaf8d457887f1 README
+SHA1 d0a3d58a5c3562b9c6b70eee80e352b02dd8efd4 bin/aseag-m
+SHA1 0ea233f99d391c65e674129851d80cae8ec9d4a3 lib/Travel/Status/DE/ASEAG.pm
+SHA1 8d0f8324ca7685eb11c728871ef7a6b8269efc59 lib/Travel/Status/DE/URA.pm
+SHA1 855e528cbae1eddd313d2899b29b9d7268211c83 lib/Travel/Status/DE/URA/Result.pm
 SHA1 fd251ffc56ca6e52020c906b61158f78b035679d t/10-pod-coverage.t
-SHA1 a5e5f6129c7135f415eb6b54dcd50c5185f59174 t/20-aseag.t
-SHA1 0a6d3c56f5fcf831922d3efafa859867a17969de t/21-get-stop-by-name.t
-SHA1 681e30482c7e0aa85aa327524ce4ab9877f3a2be t/22-results-via.t
-SHA1 2be2e5c906e5338e45eb1bf30272e9f0cb6e09ec t/in/aseag_20131223T132300
+SHA1 9a93bb9d65d7539f745b85ffa6a46b113ee4c169 t/20-aseag.t
+SHA1 7d787ae3e1337f4f84bf49a0823cd7bc3479ddf0 t/21-get-stop-by-name.t
+SHA1 b57b2a7bf74ccb566e43df2318304e5a52ea1864 t/22-results-via.t
+SHA1 4e4d01338f3f14203897ad99db10664aa53b208b t/23-results.t
+SHA1 2be2e5c906e5338e45eb1bf30272e9f0cb6e09ec t/in/instant_V1
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.15 (GNU/Linux)
+Version: GnuPG v1
 
-iQIcBAEBCgAGBQJSu98xAAoJEBANW/tRZuAF8U0QAI3IQwqoyryCM5vXe4YrxIAU
-N4XbJuT0ypIhrDVT2VI7C+Liw1rwmVElkdsoQ3PVhVvLayLFtGvffgKiHCa6Z7jP
-vdooUhP0vpHhLWUT3ALn7rJCChrHgSH3zf350eKcPCjZZnymKlwV7tuwC7rmdSei
-M0gqtrm/37CZrJe1B++CyBL0B1Z7WKoZ+12ZEtSxTfMwwMKHiNZZu7qIgm9+EK4p
-VHSOTOlOMEnQqdpJ4KXFIb8sHyo6UNXiNwqI6SSBMpwxPPpEiT+RRxDzOZH9U8+d
-3bmU5yUmn2PsT48dXM/CrhTtOu4mXTrI3wPgIxH91GLxHW4dLnqKcdgTv90ncxHy
-06PCPK48YLJyf+8xUzVGlrlsKmz3BXOnTCOuVgCtAvAaQYqt6P718/Xd6yjwHfwp
-ZhOtHEHYJRXw77OOgu95Re2O+vK3AyO2E8zsPxVxV7ktUjr9LWl57QeYjnpLMzVm
-7JVyyfeFxWI5JRLyR75gAL9kGI3ITndfm0rKKLP348nLOGwjr/Pc+Ci02TWQ5c61
-xITPTuKBd56NgyvgusZxwrFVYa6GyfRP4pIHBFn+BKgWWt5VBNZDuaEw6nfPuPdB
-L7B+CS1F20cvOBLscABO7bbVLU03bgkN2fxCLosrYMI83swBQw2S8/g3L/6roa/X
-5qPX2/fneZSo7x4I5rnd
-=U6hH
+iQIcBAEBCgAGBQJS4YluAAoJEBANW/tRZuAF5gAP/izpUnbNAm5/fzm6keLp5jke
+fNIzRDC1/mPr8+dRa3WUxUvYgo6kSQeFGVAOAkzG5J1OKFt0pFscGtazwKf8y9pv
+RWAxxDgLuFBSJXipLdck7uzC+e6ooWEnBnGFL1FqPr9e2KdNypfGA5Xed0x8Q6CV
+WkE05hcvNk0JP+scBjo06ljJq4oyaENIhaZgalFAN1wrI7mwMiYy55706dGsnpVk
+4Wdk8iaijvdga6acMLe309RoKqUB64gpWHGn170owBiDLYSERP51mlW6gZC4xVGn
+FiKxoWFVjyHNuJ2nbv8o/8Yv0jjAynde+YOLrnyZbg/A/ll84Os9F8924MSjBUD9
+Y48T85bwsV0jh3Fdukez8qW/PmYUwolyb7jnUbu9fKWiIoWTPeijgmRlQXDCLtq3
+cvnIJ4ELw2kfiRVhGoM7OecgJTR2dGUST/BheCenksH46X8g25G4F0msFvW7ZiDM
+cLXuU2KHxYxMFbUSSV4GmF59hlAtgEUjKqOP4pGnqDYmz3UuzakOFNcCsslF0hy/
+rv9pXL1AVHtQqN3fG9l5xTMmGZk/Lo7Aee+T+vThQPsKXOhgG5mM2g836BOkR/8Z
+vZzsdwiZ3Dr9PfOOtAXCYzBARBkGl6TkHTcM+Fy9wSD19UJjIauD0pIVyj6gp4Im
+Qr6ueAJsCVWcOPQ9R6f/
+=+OL4
 -----END PGP SIGNATURE-----
