@@ -5,7 +5,7 @@ use 5.010;
 
 no if $] >= 5.018, warnings => 'experimental::smartmatch';
 
-our $VERSION = '0.02';
+our $VERSION = '0.03';
 
 binmode( STDOUT, ':encoding(utf-8)' );
 
@@ -101,7 +101,7 @@ sub get_exact_stop_name {
 
 	if ( @stops == 0 ) {
 		say STDERR "No stops match '$fuzzy_name'";
-		exit(1);
+		exit(3);
 	}
 	elsif ( @stops == 1 ) {
 		return $stops[0];
@@ -110,7 +110,7 @@ sub get_exact_stop_name {
 		say STDERR "The stop '$fuzzy_name' is ambiguous. Please choose one "
 		  . 'of the following:';
 		say STDERR join( "\n", @stops );
-		exit(1);
+		exit(3);
 	}
 }
 
@@ -208,7 +208,7 @@ B<aseag-m> [B<-abfprV>] [B<-l> I<lines>] [B<-s> I<timefmt> | B<-S> I<timefmt>]
 
 =head1 VERSION
 
-version 0.02
+version 0.03
 
 =head1 DESCRIPTION
 
@@ -270,7 +270,9 @@ Show version information.
 
 =head1 EXIT STATUS
 
-Zero.
+Normally zero. B<1> means B<aseag-m> was called with invalid options,
+B<2> indicates a request error from Travel::Status::DE::URA(3pm),
+B<3> a bad (unknown or ambiguous) I<stop> name.
 
 =head1 CONFIGURATION
 
